<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.concentration.game">
    <item android:id="@+id/about2" android:title="@string/title_activity_about_me"
        android:orderInCategory="100" android:showAsAction="never"
        android:onClick="about_mm"/>
    <item android:id="@+id/New2" android:title="@string/New"
        android:orderInCategory="100" android:showAsAction="never"
        android:onClick="Newm"/>
    <item android:id="@+id/restart2" android:title="@string/restart"
        android:orderInCategory="100" android:showAsAction="never" android:onClick="restartm"/>
    <item android:id="@+id/exit2" android:title="@string/exit"
        android:orderInCategory="100" android:showAsAction="never" android:onClick="exitm"/>
</menu>
