<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Numero"
        android:layout_gravity="center"
        android:textColor="#000000"
        android:textSize="30dp"
        android:textIsSelectable="false"
        android:id="@+id/textView" />
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="100dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/p1"
            android:id="@+id/button"
            android:tag="1"
            android:layout_gravity="center_horizontal"
            android:onClick="players"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/p2"
            android:id="@+id/button2"
            android:tag="2"
            android:layout_gravity="center_horizontal"
            android:onClick="players"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/p3"
            android:id="@+id/button3"
            android:tag="3"
            android:layout_gravity="center_horizontal"
            android:onClick="players"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/p4"
            android:id="@+id/button4"
            android:tag="4"
            android:layout_gravity="center_horizontal"
            android:onClick="players"/>
    </LinearLayout>
</RelativeLayout>
