<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.android.concentration.game">
    <LinearLayout
        android:id="@+id/laygame"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hecha"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp"
            android:textSize="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yo"
            android:id="@+id/textView2"
            android:layout_gravity="center_horizontal"
            android:textSize="40dp"
            android:textStyle="bold|italic"
            android:textColor="#ff000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correo"
            android:id="@+id/textView3"
            android:layout_gravity="center_horizontal"
            android:textSize="20dp" />
    </LinearLayout>

</RelativeLayout>
